fix overflow scrolling legend

--- a/pane-details.scss
+++ b/pane-details.scss
@@ -6,6 +6,7 @@
   padding-bottom: $chart-directive-container-margin-top;
   background-color: $backgroundSlideCommentary;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 
   &.shrink{
     width: $chartLegendWidthShrink;
